force-app/main/default/objects/Result__c/Result__c.object-meta.xml
<CustomObject>
    <description
  >Stores calculated Jungian personality assessment results, including cognitive function rankings and classification scores.</description>
    <label>Result</label>
    <nameField>
        <displayFormat>RES-{0000}</displayFormat>
        <label>Result Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Results</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>