force-app/main/default/objects/Result__c/fields/Auxiliary_Function__c.field-meta.xml
<CustomField>
    <fullName>Auxiliary_Function__c</fullName>
    <description
  >The secondary cognitive function that supports the dominant function.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText
  >Your auxiliary (supporting) cognitive function - complements your dominant function.</inlineHelpText>
    <label>Auxiliary Function</label>
    <length>50</length>
    <type>Text</type>
</CustomField>