force-app/main/default/objects/Result__c/fields/Dominant_Function__c.field-meta.xml
<CustomField>
    <fullName>Dominant_Function__c</fullName>
    <description
  >The primary cognitive function - the most prominent personality trait based on assessment results.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText
  >Your dominant (primary) cognitive function - how you naturally prioritize information and decisions.</inlineHelpText>
    <label>Dominant Function</label>
    <length>50</length>
    <type>Text</type>
</CustomField>