force-app/main/default/objects/Result__c/fields/Extroverted_Score__c.field-meta.xml
<CustomField>
    <fullName>Extroverted_Score__c</fullName>
    <description>Count of answers classified as Extroverted.</description>
    <inlineHelpText
  >Total number of Extroverted answers selected in the assessment.</inlineHelpText>
    <label>Extroverted Score</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>