force-app/main/default/objects/Result__c/fields/Feeling_Score__c.field-meta.xml
<CustomField>
    <fullName>Feeling_Score__c</fullName>
    <description>Count of answers classified as Feeling.</description>
    <inlineHelpText
  >Total number of Feeling answers selected in the assessment.</inlineHelpText>
    <label>Feeling Score</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>