force-app/main/default/objects/Result__c/fields/Inferior_Function__c.field-meta.xml
<CustomField>
    <fullName>Inferior_Function__c</fullName>
    <description
  >The least developed cognitive function - potential area of friction and growth.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText
  >Your inferior (fourth) cognitive function - least natural to you and potential source of stress or growth.</inlineHelpText>
    <label>Inferior Function</label>
    <length>50</length>
    <type>Text</type>
</CustomField>