force-app/main/default/objects/Result__c/fields/Introverted_Score__c.field-meta.xml
<CustomField>
    <fullName>Introverted_Score__c</fullName>
    <description>Count of answers classified as Introverted.</description>
    <inlineHelpText
  >Total number of Introverted answers selected in the assessment.</inlineHelpText>
    <label>Introverted Score</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>