force-app/main/default/objects/Result__c/fields/Intuition_Score__c.field-meta.xml
<CustomField>
    <fullName>Intuition_Score__c</fullName>
    <description>Count of answers classified as Intuition.</description>
    <inlineHelpText
  >Total number of Intuition answers selected in the assessment.</inlineHelpText>
    <label>Intuition Score</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>