force-app/main/default/objects/Result__c/fields/Response__c.field-meta.xml
<CustomField>
    <fullName>Response__c</fullName>
    <description
  >Links this result to the questionnaire response session.</description>
    <inlineHelpText
  >The response session these results are calculated from.</inlineHelpText>
    <label>Response</label>
    <referenceTo>Response__c</referenceTo>
    <relationshipLabel>Results</relationshipLabel>
    <relationshipName>Results</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>