force-app/main/default/objects/Result__c/fields/Sensing_Score__c.field-meta.xml
<CustomField>
    <fullName>Sensing_Score__c</fullName>
    <description>Count of answers classified as Sensing.</description>
    <inlineHelpText
  >Total number of Sensing answers selected in the assessment.</inlineHelpText>
    <label>Sensing Score</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>