force-app/main/default/objects/Result__c/fields/Tertiary_Function__c.field-meta.xml
<CustomField>
    <fullName>Tertiary_Function__c</fullName>
    <description
  >The third cognitive function in the personality hierarchy.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText
  >Your tertiary (third) cognitive function - less developed but still influences behavior.</inlineHelpText>
    <label>Tertiary Function</label>
    <length>50</length>
    <type>Text</type>
</CustomField>