force-app/main/default/objects/Result__c/fields/Thinking_Score__c.field-meta.xml
<CustomField>
    <fullName>Thinking_Score__c</fullName>
    <description>Count of answers classified as Thinking.</description>
    <inlineHelpText
  >Total number of Thinking answers selected in the assessment.</inlineHelpText>
    <label>Thinking Score</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>